# mana-news

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dispatch.yml
src/: main.py
src/mana_news/: __init__.py
