[project]
name = "mana-news"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rqda", email = "info@rqda.wtf" }
]
dependencies = [
    "requests>=2.32.3",
    "discord>=2.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mana_news"]
